<resources>
    <string name="app_name">Projec Shift App Kotlin</string>
    <string name="navigation_drawer_open">open navigation</string>
    <string name="navigation_drawer_close">close navigation</string>
    <string name="profile">Profile</string>
    <string name="exit_app">Exit</string>
    <string name="Home">nev_home</string>
    <string name="preLoginState">loginState</string>
    <string name="last_name_tag">Last name:</string>
    <string name="inspector_tag">Inspector:</string>
    <string name="textview">TextView</string>
    <string name="work_area_tag">Work Area:</string>
    <string name="profile_title">Worker Profile</string>
    <string name="profile_name">TextView</string>
    <string name="profile_last_name">TextView</string>
    <string name="profile_work_area">rish</string>
    <string name="home">Home</string>
    <string name="write_it_here">Write it here</string>
    <string name="send_btn">שלח</string>
    <string name="checkBox_title">Keep me loggedIn</string>
    <string name="password_hint">Password</string>
    <string name="worker_id_hint">ID</string>
    <string name="login_text">Login</string>
    <string name="pluse_sign">+</string>
    <string name="_btn">Select Shift Date</string>
    <string name="_0">0</string>
    <string name="shifts_you_threw_this_week_title">Shifts You Threw This Week</string>
    <string name="weekly_shift_tag">Weekly shift</string>
    <string name="main_profile">Profile</string>
    <string name="heb_">Profile</string>
    <string name="heb_Threw">Throw Shift</string>
    <string name="heb_add_shift">Add Shift</string>
    <string name="heb_status_threw">Status</string>
    <string name="heb_setting">Setting</string>
    <string name="menu_title">Shift</string>
    <string name="menu_slogen_the_easy_way_to_throw_your_shift">The easy way to Throw your shift</string>
    <string name="heb_write_here">Write here…</string>
    <string name="heb_full_name">Full name</string>
    <string name="heb_work_area">Branch</string>
    <string name="heb_hint_full_name">Full name</string>
    <string name="heb_hint_work_place">Branch</string>
    <string name="heb_send">Send</string>
    <string name="heb_title_threw_shift">Shifts that have thrown away</string>
    <string name="heb_tag_name">First name</string>
    <string name="heb_tag_last_name">Last name</string>
    <string name="heb_tag_work_area">Branch</string>
    <string name="heb_tag_phone">Phone</string>
    <string name="heb_inspector">Inspector</string>
    <string name="heb_threw_btn">Delivered</string>
    <string name="heb_home_page">Actions</string>
    <string name="heb_worker_profile">Employee profile</string>
    <string name="heb_activity_title">Status</string>
    <string name="heb_date_picker_btn">Date selection</string>
    <string name="heb_home">Home</string>
    <string name="heb_myshift">My shift</string>
    <string name="heb_exit_menu_tag">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_that_throwing_over_4">Note that throwing over 4 shifts will reduce your monthly salary!</string>
    <string name="recommendation_msg">Recommendation: In order to balance the monthly salary if possible it is preferable to throw between 1 and 3 shifts a week.</string>
</resources>