<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/heb_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_profile_24"
            android:title="@string/heb_worker_profile" />
        <item
            android:id="@+id/data_pass"
            android:icon="@drawable/ic_baseline_date_range_24"
            android:title="@string/heb_status_threw" />
        <item
            android:id="@+id/setting2"
            android:icon="@drawable/ic_black_settings_24"
            android:title="@string/heb_setting" />
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/heb_exit_menu_tag" />
    </group>
</menu>