<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sx"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/imageView"
        android:layout_width="260dp"
        android:layout_height="250dp"
        android:layout_marginHorizontal="70sp"
        android:layout_marginTop="40sp"
        android:background="@drawable/avatar_17"
        android:orientation="horizontal">

    </LinearLayout>

    <EditText
        android:id="@+id/workerID"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/worker_id_hint"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#191515"
        android:textColorHint="#5E0C0C0C"
        android:autofillHints="" />

    <EditText
        android:id="@+id/workerPass"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/password_hint"
        android:textAlignment="center"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColorHint="#590C0C0C"
        android:autofillHints="" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginState"
        android:text="@string/checkBox_title"
        android:textColor="#EE1F71C3"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="150sp"
        android:layout_marginTop="55dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login_text"
        android:textStyle="bold"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="160dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:indeterminate="true"
        android:minHeight="50dp"
        android:minWidth="200dp"/>

</LinearLayout>