<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/sx"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#25F4F6F8">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                android:background="#5C032F5A"
                android:minHeight="?android:attr/actionBarSize"
                android:theme="?android:attr/actionBarTheme"
                tools:ignore="MissingConstraints"
                android:navigationIcon="@drawable/ic_menu_24"/>

            <TextView
                android:id="@+id/workerPr"
                android:layout_width="3dp"
                android:layout_height="11dp"
                android:text=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="225dp"
            android:layout_height="56dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginTop="2sp"
            android:layout_marginStart="96dp"
            android:gravity="center"
            android:text="@string/heb_Threw"
            android:textStyle="italic"
            android:textColor="#ffffff"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_marginEnd="110dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="140dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/tag_edit_text"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textDirection="rtl"
                    android:hint="@string/heb_hint_full_name"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textImeMultiLine"
                    android:maxLength="64"
                    android:maxLines="1"
                    android:text=""
                    android:textStyle="bold"
                    android:textColor="#D8070200"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tag_fname"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/heb_full_name"
                    android:textSize="16sp"
                    android:textColor="#D8070200"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="276dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginEnd="110dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_area"
                    android:layout_width="140dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/tag_edit_text"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/heb_hint_work_place"
                    android:inputType="textCapSentences|textImeMultiLine"
                    android:maxLength="64"
                    android:maxLines="1"
                    android:textColor="#D8070200"
                    android:textDirection="rtl"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tag_w_area"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="80dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/heb_work_area"
                    android:textColor="#D8070200"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inMsg"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="20dp"
                android:layout_marginTop="10dp"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="20dp"
                android:autoSizeStepGranularity="20dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/heb_write_here"
                android:inputType="textMultiLine"
                android:maxLength="50000"
                android:maxLines="6"
                android:padding="10dp"
                android:textColor="#D8070200"
                app:autoSizeTextType="uniform"
                android:textDirection="ltr"
                tools:targetApi="o" />

        </LinearLayout>

        <Button
            android:id="@+id/send_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="140sp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/heb_send"
            android:textColor="#0C0C0C"
            android:textStyle="bold"
            android:textSize="20sp" />
        <ProgressBar
            android:id="@+id/progressBar_main"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="165dp"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>