<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout2"
    android:layout_height="match_parent"
    android:background="@drawable/sx"
    tools:context=".profile_Activity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view2"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#25F4F6F8">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar2"
                android:background="#5C032F5A"
                android:minHeight="?android:attr/actionBarSize"
                android:theme="?android:attr/actionBarTheme"
                tools:ignore="MissingConstraints"
                android:navigationIcon="@drawable/ic_menu_24"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/title"
            android:layout_width="225dp"
            android:layout_height="56dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="96dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/heb_worker_profile"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="407dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/w_name"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:background="#317C7272"
                    android:text=""
                    android:textDirection="rtl"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#070606"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/name_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/heb_tag_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#070606" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/last_name"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="36dp"
                    android:text=""
                    android:background="#317C7272"
                    android:textDirection="rtl"
                    android:textStyle="bold"
                    android:textColor="#070606"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:id="@+id/name_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/heb_tag_last_name"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#070606" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/work_area"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:inputType="textPersonName"
                    android:layout_marginStart="32dp"
                    android:text=""
                    android:background="#287C7272"
                    android:textDirection="rtl"
                    android:textStyle="bold"
                    android:textColor="#070606"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints,TextViewEdits" />
                <TextView
                    android:id="@+id/name_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/heb_tag_work_area"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#070606" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="54dp"
                    android:text=""
                    android:background="#317C7272"
                    android:textDirection="rtl"
                    android:textStyle="bold"
                    android:textColor="#070606"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:id="@+id/phone_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/heb_tag_phone"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#070606" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/inspector"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="60dp"
                    android:text=""
                    android:textColor="#070606"
                    android:textDirection="rtl"
                    android:background="#14605B5B"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:id="@+id/inspector_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/heb_inspector"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#070606" />
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar_profile"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="165dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="225dp"
            android:layout_height="56dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginTop="2sp"
            android:layout_marginStart="96dp"
            android:gravity="center"
            android:text="@string/heb_"
            android:textStyle="italic"
            android:textColor="#ffff"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
